--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 body{
-    background: #454545;
+    background: #2d283e;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 .assignments{
     display:flex;
     flex-wrap:wrap;
@@ -14,7 +13,7 @@ body{
     border:2px solid #E5FCFF
 }
 .assignment{
-    background: #003333;
+    background: #564f6f;
     width:20%;
     padding: 10px;
     margin: 15px;
@@ -22,11 +21,12 @@ body{
 }
 
 h1{
-    color: #E5FCFF;
+    color: #802BB1;
     text-align: center;
 }
 h2{
     text-align:center;
+    color:#F1E8E5
 }
 a {
     text-decoration: none;
